<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_gradient">

    <!-- Title -->
    <TextView
        android:id="@+id/HomeScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/magical"
        android:gravity="center"
        android:text="@string/HomescreenTitle"
        android:textColor="#ECA52E"
        android:textSize="80sp"
        android:shadowColor="#50000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Decorative separator -->
    <View
        android:id="@+id/separator"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:background="#50FEFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/HomeScreenTitle" />

    <!-- Buttons -->
    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintVertical_bias="0.42">

        <Button
            android:id="@+id/CreateNewGameButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/btn_gold"
            android:fontFamily="@font/write_me_a_song"
            android:hapticFeedbackEnabled="true"
            android:onClick="startNewGame"
            android:text="@string/BtnNewGame"
            android:textAllCaps="false"
            android:textColor="#1E1133"
            android:textSize="26sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/GoToStatsButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/btn_lavender"
            android:fontFamily="@font/write_me_a_song"
            android:hapticFeedbackEnabled="true"
            android:onClick="goToStats"
            android:text="@string/statsTitle"
            android:textAllCaps="false"
            android:textColor="#FEFBF6"
            android:textSize="26sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/HowToPlayButton"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/btn_coral"
            android:fontFamily="@font/write_me_a_song"
            android:hapticFeedbackEnabled="true"
            android:onClick="goToRules"
            android:text="@string/howToPlay"
            android:textAllCaps="false"
            android:textColor="#FEFBF6"
            android:textSize="26sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
